syntax = "proto3";

package service;

option go_package = "nemesidaa.thumbsYT";

service Mainstream {
  // Loads & saves thumbs in DB
  rpc Load (LoadRequest) returns (LoadResponse);
  
  // Give thumbs from DB
  rpc Give (GiveRequest) returns (GiveResponse);
}

// The request message containing ID of video and resolution
message LoadRequest {
  string videoID = 1;
  string resolution = 2;
}

// The response message containing the DB ID
message LoadResponse {
  string DBID = 1;
}

// The request message for the Give method
message GiveRequest {
  string DBID = 1;
}

// The response message for the Give method
message GiveResponse {
  string status = 1;
}
